I already made that the button numbers input the number into the text field

--- a/02-calculator/index.html
+++ b/02-calculator/index.html
@@ -10,7 +10,6 @@
       data-tag="font"
     />
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./script.js">
   </head>
   <body>
     <div>
@@ -19,7 +18,7 @@
       <div class="body-container">
         <main class="body-body">
           <div class="body-calculator">
-            <input type="text" placeholder="0" class="body-field-textinput" />
+            <input type="text" placeholder="0" class="body-field-textinput" id="result" />
             <div class="body-container1">
               
               <!-- AC -->
@@ -200,5 +199,6 @@
         </main>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
