Adding the back delete function in the JS

--- a/02-calculator/index.html
+++ b/02-calculator/index.html
@@ -33,9 +33,7 @@
               <button
                 type="button"
                 class="action-button-button button ActionButton clear"
-              >
-                <span>C</span>
-              </button>
+              >C</button>
               
               <!-- DELETE -->
               <button
