--- a/02-calculator/index.html
+++ b/02-calculator/index.html
@@ -61,18 +61,14 @@
                 type="button"
                 class="number-button-button button NumberButton Heading"
                 value="7"
-              >
-                <span>7</span>
-              </button>
+              >7</button>
 
               <!-- 8 -->
               <button
                 type="button"
                 class="number-button-button button NumberButton Heading"
                 value="8"
-              >
-                <span>8</span>
-              </button>
+              >8</button>
 
 
               <!-- 9 -->
@@ -80,117 +76,91 @@
                 type="button"
                 class="number-button-button button NumberButton Heading"
                 value="9"
-              >
-                <span>9</span>
-              </button>
+              >9</button>
 
               <!-- X -->
               <button
                 type="button"
                 class="math-operator-button-button button Heading MathOperations"
                 value="*"
-              >
-                <span>×</span>
-              </button>
+              >×</button>
 
               <!-- 4 -->
               <button
                 type="button"
                 class="number-button-button button NumberButton Heading"
                 value="4"
-              >
-                <span>4</span>
-              </button>
+              >4</button>
 
               <!-- 5 -->
                 <button
                   type="button"
                   class="number-button-button button NumberButton Heading"
                   value="5"
-                >
-                  <span>5</span>
-                </button>
+                >5</button>
 
               <!-- 6 -->
               <button
                 type="button"
                 class="number-button-button button NumberButton Heading"
                 value="6"
-              >
-                <span>6</span>
-              </button>
+              >6</button>
 
               <!-- - -->
               <button
                 type="button"
                 class="math-operator-button-button button Heading MathOperations"
                 value="-"
-              >
-                <span>-</span>
-              </button>
+              >-</button>
 
               <!-- 1 -->
               <button
                 type="button"
                 class="number-button-button button NumberButton Heading"
                 value="1"
-              >
-                <span>1</span>
-              </button>
+              >1</button>
 
               <!-- 2 -->
               <button
                 type="button"
                 class="number-button-button button NumberButton Heading"
                 value="2"
-              >
-                <span>2</span>
-              </button>
+              >2</button>
 
               <!-- 3 -->
               <button
                 type="button"
                 class="number-button-button button NumberButton Heading"
                 value="3"
-              >
-                <span>3</span>
-              </button>
+              >3</button>
 
               <!-- + -->
               <button
                 type="button"
                 class="math-operator-button-button button Heading MathOperations"
                 value="+"
-              >
-                <span>+</span>
-              </button>
+              >+</button>
 
               <!-- 0 -->
               <button
                 type="button"
                 class="body-button1 button NumberButton Heading NumberZero"
                 value="0"
-              >
-                <span>0</span>
-              </button>
+              >0</button>
 
               <!-- . -->
               <button
                 type="button"
                 class="number-button-button button NumberButton ActionButton Heading"
                 value="."
-              >
-                <span>.</span>
-              </button>
+              >.</button>
 
               <!-- = -->
               <button
                 type="button"
                 onclick="calculate()"
                 class="math-operator-button-button button Heading MathOperations equal"
-              >
-                <span>=</span>
-              </button>
+              >=</button>
 
             </div>
           </div>
