Adding the math function working (just the less operator for the moment) just the first operation works, if I continue making more operations, it is not working properly

--- a/02-calculator/index.html
+++ b/02-calculator/index.html
@@ -158,8 +158,7 @@
               <!-- = -->
               <button
                 type="button"
-                onclick="calculate()"
-                class="math-operator-button-button button Heading MathOperations equal"
+                class="math-operator-button-button button Heading equalButton"
               >=</button>
 
             </div>
