All the functions and decimals are working properly, adding too the preview mode of the operation in curse

--- a/02-calculator/index.html
+++ b/02-calculator/index.html
@@ -18,6 +18,11 @@
       <div class="body-container">
         <main class="body-body">
           <div class="body-calculator">
+            <div id="operationPreview">
+              <span id="value1Display" class="inactive">Value1</span>
+              <span id="operatorDisplay" class="inactive">Operator</span>
+              <span id="value2Display" class="inactive">Value2</span>
+            </div>
             <input type="text" placeholder="0" class="body-field-textinput" id="result" />
             <div class="body-container1">
               
